Updates project links -> target=_blank

--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -22,7 +22,7 @@
         <ul class="recent">
             <p>Recent projects:</p>
              {% for project in site.projects limit:3%}
-                <li><a href="{{ project.url}}"><h2 class="post-title" itemprop="name">{{ project.name }}</h2></a></li>
+                <li><a href="{{ project.url}}" target="_blank"><h2 class="post-title" itemprop="name">{{ project.name }}</h2></a></li>
               {% endfor %}
         </ul>
     </div>
